# server/src/application/dto/admin/dashboard/product_response.rs
@@ -1,0 +1,7 @@
+use serde::Serialize;
+
+#[derive(Debug, Serialize)]
+pub struct ProductResponse {
+  pub active_count: i64,
+  pub inactive_count: i64,
+}
