# server/src/presentation/handlers/admin_dashboard_handlers.rs
@@ -1,5 +1,6 @@
 use actix_web::{get, web, HttpResponse};
 use log::error;
+use crate::application::use_cases::admin::dashboard::get_product_data::GetProductDataUseCase;
 use crate::application::use_cases::admin::dashboard::get_sales_data::GetSalesDataUseCase;
 use crate::application::use_cases::admin::dashboard::get_user_data::GetUserDataUseCase;
 use crate::infrastructure::app_state::AppState;
@@ -32,6 +33,22 @@ pub async fn get_user_data_handler(
     Ok(user_data) => HttpResponse::Ok().json(user_data),
     Err(_) => {
       error!("Error getting user data!");
+      HttpResponse::InternalServerError().body("Please try again later")
+    }
+  }
+}
+
+#[get("/product")]
+pub async fn get_product_data_handler(
+  app_state: web::Data<AppState>
+) -> HttpResponse {
+  let product_repo = app_state.product_repo.clone();
+
+  match GetProductDataUseCase::new(product_repo)
+    .execute().await {
+    Ok(product_data) => HttpResponse::Ok().json(product_data),
+    Err(_) => {
+      error!("Error getting product data!");
       HttpResponse::InternalServerError().body("Please try again later")
     }
   }
